--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">AudioRecorder</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">AudioProtector</string>
+    <string name="title_main_tab"></string>
+    <string name="title_settings_tab">Настройки</string>
+    <string name="title_records_tab">Аудиозаписи</string>
 </resources>
