--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,32 @@
     <string name="title_main_tab"></string>
     <string name="title_settings_tab">Настройки</string>
     <string name="title_records_tab">Аудиозаписи</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <string name="light_mode_auto">0</string>
+    <string name="light_mode_on">1</string>
+    <string name="light_mode_off">2</string>
+
+    <string name="pf_dark_auto">00</string>
+    <string name="pf_light_on">01</string>
+    <string name="pf_light_off">02</string>
+
+    <string name="pf_dark_dialog">001</string>
+    <string name="pf_key_light">002</string>
+
+    <string name="pf_light_title">Главная тема</string>
+    <string name="pf_content_message">Системная</string>
 </resources>
