implement app info button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
 
     <string name="themeModeListKey">themeMode</string>
     <string name="title_activity_do_not_disturb_interval">DoNotDisturbIntervalActivity</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -50,5 +51,23 @@
     <string name="preference_do_not_disturb_from_minute">preference_do_not_disturb_from_minute</string>
     <string name="preference_do_not_disturb_to_hour">preference_do_not_disturb_to_hour</string>
     <string name="preference_do_not_disturb_to_minute">preference_do_not_disturb_to_minute</string>
+
+    <!-- App info -->
+    <string name="app_info">Данное приложение представляет собой продвинутый диктофон, предназначенный для обеспечения безопасности владельца устройства и предотвращения бытовых и криминальных конфликтов. Включенное в фоновом режиме, приложение автоматически включает запись, распознав в пределах слышимости человеческую речь, записывая небольшие аудиофайлы до трех минут и сохраняя их в память телефона и облачное хранилище. После того, как человеческая речь стихает, приложение вновь переходит в режим ожидания.
+
+Иногда, во время возникновения конфликтов, случается такое, что нет никакой возможности достать из кармана телефон и начать фиксировать происходящее на диктофон или видеокамеру:
+- незнакомец предлагает ребенку показать леденцы в затонированном фургоне;
+- в темной подворотне трое просят закурить и поделиться деньгами;
+- пассажиры невежливо просят таксиста выйти из автомобиля и дать им порулить…
+Одно лишь упоминание о том, что в данный момент ведется аудиозапись происходящего напрямую в облачное хранилище, может вывести назревающий конфликт из горячей фазы или вообще свести его на нет.
+В крайнем же случае, сотрудники правоохранительных органов могут получить записи из облака для оценки произошедшего и установления причин и виновников конфликта.
+
+Предоставив приложению доступ к геолокации, в списке аудиофайлов будет видно, где находился телефон во время осуществления записи.
+
+В памяти устройства может храниться не более 50 записей. При достижении лимита, новые записи будут сохраняться после удаления самых старых файлов.
+Размер облака составляет 200 MB, но при желании его можно расширить.
+
+Берегите себя!</string>
+    <string name="title_activity_app_info">Информация</string>
 
 </resources>
