--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
 
 Берегите себя!</string>
     <string name="title_activity_app_info">Информация</string>
+    <string name="title_activity_cloud_plan">Размер облака</string>
 
 </resources>
